Remove unused class and add CLI entry point
- Removed `Class1` class from `Class1.cs`.
- Updated `FileConverter.CLI.csproj` to set output type to `Exe`.
- Modified `GetParameter<T>` method in `ConversionParameters.cs` to remove default value parameter.
- Removed reference to `FileConverter.Core.csproj` in `FileConverter.Converters.csproj`.
- Added reference to `FileConverter.Converters.csproj` in `FileConverter.Core.csproj`.
- Introduced new `Program` class in `Program.cs` as the application entry point, implementing file creation and conversion logic.

--- a/FileConverter.Core/FileConverter.Core.csproj
+++ b/FileConverter.Core/FileConverter.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FileConverter.Common\FileConverter.Common.csproj" />
+    <ProjectReference Include="..\FileConverter.Converters,\FileConverter.Converters.csproj" />
   </ItemGroup>
 
 </Project>
