Add spreadsheet format converters and UI enhancements
Updated `ConversionEngineFactory` to include `TsvToCsvConverter` and `CsvToTsvConverter`. Modified project references in `FileConverter.csproj` to support new converters. Enhanced `MainWindow.xaml` for improved UI with input/output file selection and conversion options. Updated `MainWindow.xaml.cs` to initialize the conversion engine and manage user interactions. Introduced new converter classes for CSV and TSV formats, implementing the `IConverter` interface with parameter handling and progress reporting.

--- a/FileConverter/FileConverter.csproj
+++ b/FileConverter/FileConverter.csproj
@@ -8,4 +8,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FileConverter.Common\FileConverter.Common.csproj" />
+    <ProjectReference Include="..\FileConverter.Converters,\FileConverter.Converters.csproj" />
+    <ProjectReference Include="..\FileConverter.Core\FileConverter.Core.csproj" />
+    <ProjectReference Include="..\FileConverter.UI\FileConverter.UI.csproj" />
+  </ItemGroup>
+
 </Project>
