Add document conversion support for DOCX and PDF
Updated project files to include package references for
DocumentFormat.OpenXml, itext7, and PdfPig. Added new
converters: DocxToCsvConverter, DocxToTsvConverter,
PdfToCsvConverter, and PdfToTsvConverter, enabling
conversion of DOCX and PDF files to CSV and TSV formats.
Implemented comprehensive error handling and progress
reporting in the new converters to enhance user experience
and application robustness.

--- a/FileConverter.Core/FileConverter.Core.csproj
+++ b/FileConverter.Core/FileConverter.Core.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+    <PackageReference Include="itext7" Version="9.1.0" />
+    <PackageReference Include="PdfPig" Version="0.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FileConverter.Common\FileConverter.Common.csproj" />
     <ProjectReference Include="..\FileConverter.Converters,\FileConverter.Converters.csproj" />
   </ItemGroup>
