Add converters for DOCX, PDF, and XML formats
Updated project references and added new converter classes for DOCX to CSV/TSV and PDF to CSV/TSV conversions. Enhanced existing XML converters to support CSV and TSV formats. Included necessary using directives, error handling, and progress reporting in all converter implementations. Modified project files to ensure proper dependencies and configurations.

--- a/FileConverter.CLI/FileConverter.CLI.csproj
+++ b/FileConverter.CLI/FileConverter.CLI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FileConverter.Common\FileConverter.Common.csproj" />
+    <ProjectReference Include="..\FileConverter.Converters\FileConverter.Converters.csproj" />
     <ProjectReference Include="..\FileConverter.Core\FileConverter.Core.csproj" />
   </ItemGroup>
 
