--- a/FileConverter.Core/FileConverter.Core.csproj
+++ b/FileConverter.Core/FileConverter.Core.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FileConverter.Common\FileConverter.Common.csproj" />
-    <ProjectReference Include="..\FileConverter.Converters,\FileConverter.Converters.csproj" />
+    <ProjectReference Include="..\FileConverter.Converters\FileConverter.Converters.csproj" />
   </ItemGroup>
 
 </Project>
