--- a/FileConverter.Converters/FileConverter.Converters.csproj
+++ b/FileConverter.Converters/FileConverter.Converters.csproj
@@ -2,13 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>FileConverter.Converters_</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+    <PackageReference Include="DocumentFormat.OpenXml.Features" Version="3.3.0" />
     <PackageReference Include="itext7" Version="9.1.0" />
     <PackageReference Include="PdfPig" Version="0.1.10" />
   </ItemGroup>
