Add Markdown and PDF conversion capabilities
Updated project to include Markdig for Markdown processing.
Added `MarkdownToHtmlConverter` and `PdfToTxtConverter` to
expand conversion options. Refactored `MainWindow.xaml.cs`
for improved readability and maintainability, including
enhanced documentation and organization. Both new converters
feature detailed comments and structured methods for future
enhancements.

--- a/FileConverter.Converters/FileConverter.Converters.csproj
+++ b/FileConverter.Converters/FileConverter.Converters.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml.Features" Version="3.3.0" />
     <PackageReference Include="itext7" Version="9.1.0" />
+    <PackageReference Include="Markdig" Version="0.41.0" />
     <PackageReference Include="PdfPig" Version="0.1.10" />
   </ItemGroup>
 
